<resources>
    <string name="app_name">Notifica</string>

    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_main">Notifica</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="option_teacher">Teacher</string>
    <string name="option_student">Student</string>
    <string name="action_logout">Log Out</string>

    <string name="login_motto">Everything You Need!</string>
    <string name="login_rights">All Rights Reserved.</string>


    <string-array name="page_titles">
        <item>Routine</item>
        <item>Assignments</item>
        <item>Notices</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_event_adder">EventAdder</string>
    <string name="action_update">Update</string>


    <string name="text_about">
        Version: 1.0\n\n
        Created By:\n
        Notifica-Group\n\n\n
        http://notifica.herokuapp.com/
    </string>



    <!-- Strings related to login -->
    <string name="prompt_user_id">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>

    <string name="error_invalid_user_id">This user id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password does not match with the user id</string>
    <string name="error_field_required">This field is required</string>


    <string name="holiday_string">छुट्टी मकै भुट्टी</string>


    <!-- facebook app id -->
    <string name="facebook_app_id">641470069288425</string>
    <string name="title_activity_facebook_settings">Facebook Connection Settings</string>
    <string name="action_clean_update">Clean Update</string>
</resources>
