<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#ffffffff"
    android:paddingTop="16dp"
    tools:context=".AboutActivity"
    android:fitsSystemWindows="true">

    <LinearLayout android:id="@+id/about_form"
        android:layout_width="match_parent"
        android:paddingTop="16dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:paddingBottom="5dp"
            android:textColor="@color/primary"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingTop="30dp"
            android:textColor="@color/secondaryText"
            android:autoLink="all"
            android:textColorLink="#ffa2a2a2"
            android:text="@string/text_about"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:textSize="12sp"
                android:paddingBottom="5dp"
                android:textColor="@color/secondaryText"
                android:text="@string/login_motto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:textSize="12sp"
                android:paddingBottom="5dp"
                android:textColor="@color/secondaryText"
                android:text="@string/login_rights"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



